WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46133
ProcessLauncherWin.cpp leaks the child process handle
https://bugs.webkit.org/show_bug.cgi?id=46133
Summary
ProcessLauncherWin.cpp leaks the child process handle
Anders Carlsson
Reported
2010-09-20 16:30:00 PDT
We should ::CloseHandle the handle.
Attachments
Stop leaking the web process's process handle on Windows
(4.22 KB, patch)
2010-09-27 07:01 PDT
,
Adam Roben (:aroben)
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-09-20 16:31:31 PDT
According to MSDN: If the function succeeds, be sure to call the CloseHandle function to close the hProcess and hThread handles when you are finished with them. Otherwise, when the child process exits, the system cannot clean up the process structures for the child process because the parent process still has open handles to the child process. However, the system will close these handles when the parent process terminates, so the structures related to the child process object would be cleaned up at this point.
http://msdn.microsoft.com/en-us/library/ms684873(v=VS.85).aspx
Adam Roben (:aroben)
Comment 2
2010-09-20 16:32:05 PDT
<
rdar://problem/8455343
>
Adam Roben (:aroben)
Comment 3
2010-09-27 07:01:14 PDT
Created
attachment 68905
[details]
Stop leaking the web process's process handle on Windows
Adam Roben (:aroben)
Comment 4
2010-09-27 08:23:45 PDT
Committed
r68391
: <
http://trac.webkit.org/changeset/68391
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug