Stop leaking the web process's process handle on Windows

Fixes <http://webkit.org/b/46133> <rdar://problem/8455343>

Reviewed by Anders Carlsson.

* UIProcess/Launcher/ProcessLauncher.cpp:
(WebKit::ProcessLauncher::invalidate): Call platformInvalidate.

* UIProcess/Launcher/ProcessLauncher.h: Added platformInvalidate.

* UIProcess/Launcher/mac/ProcessLauncherMac.mm:
(WebKit::ProcessLauncher::platformInvalidate):
* UIProcess/Launcher/qt/ProcessLauncherQt.cpp:
(WebKit::ProcessLauncher::platformInvalidate):
Stubbed out.

* UIProcess/Launcher/win/ProcessLauncherWin.cpp:
(WebKit::ProcessLauncher::platformInvalidate): Close the process
handle like MSDN says we should.

Canonical link: https://commits.webkit.org/59081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68391 268f45cc-cd09-0410-ab3c-d52691b4dbfc