WebKit2/UIProcess/Launcher/qt/ProcessLauncherQt.cpp
@@ -27,6 +27,7 @@
 #include "ProcessLauncher.h"
 
 #include "Connection.h"
+#include "NotImplemented.h"
 #include "RunLoop.h"
 #include "WebProcess.h"
 #include <runtime/InitializeThreading.h>
@@ -139,6 +140,11 @@ void ProcessLauncher::terminateProcess()
 QLocalSocket* ProcessLauncher::takePendingConnection()
 {
     return ProcessLauncherHelper::instance()->takePendingConnection();
+}
+
+void ProcessLauncher::platformInvalidate()
+{
+    notImplemented();
 }
 
 } // namespace WebKit
